welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
}
override def run() {
	var cpt : Int =0
	ecritMessage(cpt);
	droite();

	while(!posF){
		if(estDosMur){
			setPos(getX()+1,getY());
		}
		if(estFaceMur){
			setPos(getX()-1,getY());
		}else{
			setPos(getX(),getY()+1);
		}
		
	cpt = cpt + 1 
	ecritMessage(cpt)	
	}
	gauche();
}





def posF():Boolean ={
	if( getX()== (getMondeLargeur()-1)  && getY()==(getMondeHauteur()-1)){
		return true
	}else{
		return false
	}
}
